--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "orrery",
+  "name": "not-today",
   "version": "1.1.7",
   "description": "An interactive map of the Solar System created with Three.js and jQuery.",
   "main": "js/orrery/launch.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite"
   },
   "repository": {
     "type": "git",
@@ -20,11 +21,12 @@
   "devDependencies": {
     "jsdoc": "^3.6.10",
     "three": "^0.156",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vite": "^5.4.8"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^16.6.0",
     "jquery": "^3.7.1",
-    "jquery-ui": "^1.13.2",
-    "@tweenjs/tween.js": "^16.6.0"
+    "jquery-ui": "^1.13.2"
   }
 }
